# spark-ai-companion

./: .dockerignore  .env.docker  .env.sample  .env_example  .gcloudignore  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  Makefile  README.md  README.v0.md  ai-companion.excalidraw  alembic.ini  docker-compose.yml  main.py  main.py.bk  pyproject.toml  requirements.txt
app/: main.py
app/agents/spark_companion/: agent.py  prompts.py
app/agents/spark_companion/shared_libraries/: file_utils.py
app/agents/spark_companion/tools/: blob_reader.py  code_reader.py
app/api/: __init__.py
app/api/converters/: user_converters.py
app/api/dependencies/: __init__.py  auth.py  database.py  service.py
app/api/routes/: __init__.py
app/api/routes/v0/: __init__.py  auth.py
app/core/: config.py  exceptions.py  logging.py
app/domain/dto/: auth.py  user.py
app/domain/schemas/: base.py
app/domain/schemas/request/: auth.py
app/domain/schemas/response/: auth.py  base.py  exception.py
app/domain/services/: user_service.py
app/infrastructure/database/: session.py
app/infrastructure/database/models/: __init__.py  (+4 more)
app/infrastructure/web/: exception_handlers.py  lifespan.py  middleware.py
example_spark_job/: sort.py  submit-job.sh
migrations/: env.py
migrations/versions/: 20250814_init_models.py
shared_libraries/: file_utils.py
spark_companion/: __init__.py  agent.py  prompts.py
static/: index.html  style.css
static/js/: app.js  media-handler.js
sub_agents/case_matcher/: case_matcher.py  prompts.py
sub_agents/code_analyzer/: code_analyzer.py  prompts.py
sub_agents/spark_ui_analyzer/: prompts.py  ui_analyzer.py
terraform/: .terraform.lock.hcl  dataproc.tf  terraform.tfstate  variables.tf
terraform_ai_companion_pso_hack/: composer.tf  dataproc.tf  provider.tf  terraform.tfstate
terraform_demo/: backend.tf  main.tf  variables.tf
terraform_pso_hackathon_companion/: main.tf  terraform.tfstate
tools/: blob_reader.py  code_reader.py  dataproc_helper.py  dataproc_job_helper.py
vertex_search_agent/: agent.py
(+9 files in other folders)
